# mta-sga-cs-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TEST_AUTO_SYNC.md  WAHA_CONFIG_EXAMPLE.txt  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 001_new_schema.py  17614e3551db_add_user_id_to_checkin_rooms.py  3ea0be2086ab_initial_schema.py  456a55de0ffa_create_order_assigners_table.py  61997bf04f55_rename_user_id_to_guest_id_and_add_.py  add_agent_fields_to_sessions.py  add_checkin_room_id_to_orders.py  add_note_to_order_items.py  change_order_category_to_division_id.py  f5b1f47cf870_add_code_to_roles.py  (+2 more)
app/: __init__.py  main.py
docs/: AVAILABLE_ROOMS_API.md  DOCKER.md  DOCKER_QUICKREF.md  ERROR_HANDLING.md  GUEST_REGISTRATION.md  GUEST_REGISTRATION_QUICKREF.md  GUEST_REGISTRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KEYCLOAK_AUTH.md  KEYCLOAK_AUTH_QUICKREF.md  KEYCLOAK_AUTO_SYNC.md  KEYCLOAK_AUTO_SYNC_DEBUG.md  KEYCLOAK_AUTO_SYNC_QUICKREF.md  KEYCLOAK_COMPLETE_SUMMARY.md  KEYCLOAK_FIX_SUMMARY.md  KEYCLOAK_IMPLEMENTATION_SUMMARY.md  KEYCLOAK_TOKEN_FORMAT_UPDATE.md  KEYCLOAK_TROUBLESHOOTING.md  LOCAL_DEVELOPMENT.md  PAGINATION_USAGE.md  WAHA_IMPLEMENTATION_SUMMARY.md  WAHA_INTEGRATION.md  WAHA_QUICKREF.md  WEBHOOK_FLOW_IMPROVEMENT.md  WEBHOOK_SESSION_MANAGEMENT.md  WEBHOOK_SESSION_MANAGEMENT_QUICKREF.md  WEBHOOK_WAHA.md
erd_diagram/: v1_erd.md
scripts/: migrate-rollback.sh  migrate-status.sh  migrate.sh
tests/: test_webhook.py  test_webhook_real_format.py
(+63 files in other folders)
